--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,5 +56,9 @@ flutter {
 }
 
 dependencies {
+    def appcompat_version = "1.3.1"
+
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
